<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/numberOfRollsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Two die"
            app:layout_constraintBottom_toTopOf="@+id/NumberOfRollsSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.976"
            app:layout_constraintStart_toStartOf="parent" />

    <Button
            android:id="@+id/RollButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="84dp"
            android:text="@string/roll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/d4TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="28dp"
            android:text="@string/d10"
            app:layout_constraintBottom_toTopOf="@+id/DiceYouAreRollingSeekBar"
            app:layout_constraintStart_toEndOf="@+id/d4TextView" />

    <TextView
            android:id="@+id/d4TextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:text="@string/d12"
            app:layout_constraintBottom_toTopOf="@+id/DiceYouAreRollingSeekBar"
            app:layout_constraintEnd_toStartOf="@+id/d4TextView4"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toEndOf="@+id/d4TextView3" />

    <TextView
            android:id="@+id/D4TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="28dp"
            android:text="@string/D4"
            app:layout_constraintBottom_toTopOf="@+id/DiceYouAreRollingSeekBar"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/d4TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginBottom="28dp"
            android:text="@string/d8"
            app:layout_constraintBottom_toTopOf="@+id/DiceYouAreRollingSeekBar"
            app:layout_constraintStart_toEndOf="@+id/d4TextView2" />

    <TextView
            android:id="@+id/d4TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/d6"
            app:layout_constraintBottom_toTopOf="@+id/DiceYouAreRollingSeekBar"
            app:layout_constraintStart_toEndOf="@+id/D4TextView"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintVertical_bias="0.571" />

    <TextView
            android:id="@+id/d4TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="352dp"
            android:layout_marginLeft="352dp"
            android:layout_marginBottom="28dp"
            android:text="@string/d20"
            app:layout_constraintBottom_toTopOf="@+id/DiceYouAreRollingSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
            android:id="@+id/DiceYouAreRollingSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="40dp"
            android:max="5"
            android:progress="5"
            app:layout_constraintBottom_toTopOf="@+id/NumberOfRollsSeekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
            android:id="@+id/NumberOfRollsSeekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:indeterminate="false"
            android:max="1"
            android:progress="0"
            app:layout_constraintBottom_toTopOf="@+id/RollButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/NumberOfRollsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="One dice"
            app:layout_constraintBottom_toTopOf="@+id/NumberOfRollsSeekBar"
            app:layout_constraintStart_toStartOf="parent" />

    <View
            android:id="@+id/divider2"
            android:layout_width="377dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/D4TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.259"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/ResultsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textSize="144sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigationView"
            style="@style/Base.CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:itemBackground="@color/colorPrimary"
            app:itemTextColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>